updated the list of tasks to be done before the release

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,17 +1,19 @@
 
 
+- publish on quora and ask for feedback
+- remove branding from all pictures                                     PARTIALLY DONE
 - add subtitles for pictures to create a story
 - review all copy/content
 - spell check all text
-- show more and less
+- show more and less                                                    PARTIALLY DONE
 - vertical align text with pictures
 - break education in seminars and university
 - do not reload profile picture when changing the page
 - test on all browsers
 - make layout responsive
-- complete the list of books											DONE
+- complete the list of books											PARTIALLY DONE
 - complete contact page													DONE
-- buy .com domain														DONE
+- buy .com domain														PARTIALLY DONE
 - make sure links look alike on all pages (about page is an example)	DONE
 - complete NDA text														DONE
 - fix padding bottom													DONE
